--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello excursion
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+  </head>
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#">Download Excursion (Coming soon!)</a>
+  </body>
+</html>
