--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+    </header>
     <a href="#">Download Excursion (Coming soon!)</a>
+    <p>
+      <video src="./resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.jpg" alt="camp tent"></p>
+    <p><img src="./resources/images/phone.png" alt="phone icon"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="#">Download Excursion (Coming soon!)</a>
+    <footer>
+      <p>&copy; Excursion</p>
+    </footer>
   </body>
 </html>
